# preiskampf-app

./: .gitignore  .ignore  Cargo.toml  eslint.config.mjs  package.json  post_build.js  tailwind.config.js  typography.js  webpack.mix.js
.github/workflows/: deploy.yml
assets/img/: aldisued_icon_85x100.avif
assets/img/markets/: aldisued_favicon.avif
config/: auth.json  navigation.json
resources/css/: index.css
resources/js/: HttpHeaderEnrichedUi.js  main.js
resources/js/elements/: AjaxFormInput.js  EmojiPicker.js  GeocodingInput.js  Navigation.js  NavigationToggle.js  Notification.js  PopoverToggle.js
resources/js/lib/: HtmxEventListener.js  Router.js  ViewTransition.js
src/: db.rs  error.rs  main.rs
src/core/: mod.rs
src/core/client_action/: mod.rs
src/core/context/: mod.rs
src/core/pagination/: mod.rs
src/model/: mod.rs
src/routes/: auth.rs  details.rs  mod.rs  templates.rs
src/services/: mod.rs
src/view/: mod.rs
templates/layouts/: default.html  full_width.html
templates/partials/: footer.html  head_include.html  icons.html
templates_old/: 404.hbs  about.hbs  einkaufstour.hbs  einkaufszettel.hbs  index.hbs  login.hbs  mein-profil.hbs  registrieren.hbs  stoebern.hbs
templates_old/details/: einkaufszettel.hbs  produkt.hbs
templates_old/icons/: arrow.hbs  cart.hbs  checkmark.hbs  close.hbs  divider.hbs  external.hbs  menu_icon.hbs  plus.hbs  shopping_bag.hbs  shopping_list.hbs  three_dots.hbs  x_icon.hbs
templates_old/layouts/: default.hbs  full_width.hbs
templates_old/partials/: footer.hbs  head_include.hbs
(+146 files in other folders)
