[package]
name = "rust-webserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.39.0", features = ["macros", "rt-multi-thread"] }
axum = "0.7.2"
serde_json = "1.0.108"
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
handlebars = { version = "4.5.0", features = ["dir_source"] }
config = "0.13.3"
serde = "1.0.192"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres", "json", "chrono"] }
jsonwebtoken = "9.1.0"
once_cell = "1.18.0"
html-minifier = "5.0.0"
pwhash = "1.0.0"
headers = "0.4.0"
chrono = {version = "0.4.31", features = ["serde"]}
askama = { version = "0.12.1" }
dotenv = "0.15.0"
